# small-rust-music-player

./: .gitignore  Cargo.toml  README.md
src/: assets.rs  audio.rs  input.rs  main.rs  mesh.rs  settings.rs  shaders.rs  stage.rs  text.rs
