[package]
name = "small-rust-music-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
lowpass-filter = "0.3.2"
miniquad = { version = "=0.4.0-alpha.10", features = ["log-impl"] }
rodio = { version = "0.17.3", features = ["symphonia"] }
